--- a/Makefile.in
+++ b/Makefile.in
@@ -10,7 +10,7 @@ TINYXML_LIBS = @TINYXML_LIBS@
 
 CFLAGS +=  -Wall -O2 -fPIC  -Os -DTIXML_USE_STL
 INCLUDES = $(CPPFLAGS) $(TINYXML_CFLAGS) 
-LDFLAGS +=  -s  $(CREATE_LIB) $(CREATE_DEF)
+LDFLAGS += $(CREATE_LIB) $(CREATE_DEF)
 LDLIBS = $(T_LDLIBS) $(TINYXML_LIBS) -lm -lstdc++
 
 LINK_dll = $(GCC) -o $@ $^ $(LDLIBS) $(LDFLAGS)
